[project]
name = "fuzzylite-checks"
version = "7"
dependencies = [
    # source code formatting
    "clang-format==19.1.1",
    # code coverage interpretation
    "gcovr==8.2",
    # markdown linter
    "pymarkdownlnt==0.9.24",
]
requires-python = ">=3.9"

[tool.pymarkdown]
plugins.line-length.enabled = true
plugins.line-length.line_length = 120
plugins.line-length.code_block_line_length = 120
# MD024: Multiple headings cannot contain the same content. (no-duplicate-heading,no-duplicate-header)
plugins.MD024.enabled = false
# MD046: Code block style [Expected: indented; Actual: fenced] (code-block-style)
plugins.MD046.enabled = false
# MD033: Inline HTML [Element: a] (no-inline-html)
plugins.MD033.enabled = false
# MD034: Bare URL used (no-bare-urls)
plugins.MD034.enabled = false
# MD041: First line in file should be a top level heading
plugins.MD041.enabled = false
